		files, thumbnails are now also removed from disk.
		Updated tic file import function to the new files database
		structure.
		Added more checks and logging for adding new file announce 
		records. Newer files will replace the older record so the last
		one will be announced.
		Fixed a bug in mbfile kill that destroyed the filebase when a
		file was deleted or moved.

	mbfile:
		Updated kill, index, check, pack, list, adopt, import, move,
		delete and sort to the new files database structure.
		The file delete function in kill didn't delete the thumbnail.
		The mbfile del and undel commands accept wildcards in the 
		filename.
		Fixed an error in check when a mangled 8.3 filename was changed
		and the symbolic link was not adjusted.
		Added rearc command.
		The check command does now also check if the magic alias file
		request names are valid and removes the invalid entries.

	mbaff:
		When scanning for uploads, files which were hatched now have
		the right tic area name instead of AREA n in the announce
		record. They also contain the used magic filename if this is
		known.
		The scan for new uploads function is updated to the new files
		database structure.
		The filefind function is updated to the new files database
		structure.

	mbsebbs:
		Updated to the new files database structure.

	mbsetup:
		Added auto upgrade for the files database.
		Changed menus 14, 7.n.6, 10.1 and 8.4.
		Changed default charset for new mailgroups and message areas
		to CP437.
		Added setup for filefind keyword length in menu 13.
		Added setup items in menu 1.5 for child priority and filesystem
		sync calls.

	mbuseradd:
		Fixed removing of a OS created homedir. This may solve problems
		on RH and Fedora (under test).

	examples:
		Updated English, German, Spanish and Dutch macro files:
		html.nodes and filemgr.status.

	lang:
		removed obsolete prompt 240.
		Updated germandu.txt (by Malte Tychsen).


v0.51.1		21-Feb-2004 - 06-Mar-2004

	upgrade: